# FrequencyAnalysis

./: .gitignore  CMakeLists.txt  README.md  data.csv
FrequencyGrapher/: FrequencyGrapher.csproj  FrequencyGrapher.sln  Program.cs
FrequencyGrapher/Properties/: launchSettings.json
FrequencyGrapher/Properties/PublishProfiles/: FolderProfile.pubxml
Release/: CreateData.bat
Release/test/: out.data
lib/fftw-3.3.5-dll64/: libfftw3-3.exp  libfftw3-3.lib
sklearn-env/: main.py  pyvenv.cfg
sklearn-env/Scripts/: activate  activate.bat
sklearn-env/test/: test.data
src/: Header.h  analyzer.cpp  decoder.cpp  helperfuncs.cpp  wavreader.cpp
training_set/audio/: Pairings2.txt  Pairings3.txt  Pairings4.txt  Pairings9.txt
training_set/data/0/: 0.data  1.data  13.data  2.data  21.data  22.data  24.data  31.data  32.data  33.data  35.data  4.data  40.data  41.data  44.data  46.data  49.data  55.data  57.data  58.data  59.data  6.data  7.data  9.data
training_set/data/1/: 0.data  5.data  7.data
training_set/data/2/: 10.data  15.data  16.data  17.data  2.data  22.data  25.data  3.data  4.data  6.data  8.data
training_set/data/3/: 0.data  1.data  11.data  16.data  17.data  2.data  28.data  3.data  37.data  45.data  53.data  55.data  6.data  63.data  66.data  78.data
training_set/data/4/: 1.data  10.data  11.data  14.data  17.data  19.data  23.data  26.data  32.data  39.data
training_set/data/contemporary_pieces/3/: 12.data  19.data  20.data  39.data  41.data  43.data  61.data
training_set/data/contemporary_pieces/9/: 1.data  14.data  15.data  17.data  2.data  3.data  7.data
training_set/data/core/major_scales/: 0.data  1.data  10.data  11.data  2.data  3.data  4.data  5.data  6.data  7.data  8.data  9.data
training_set/data/jazz/4/: 15.data  24.data  29.data  30.data  36.data  37.data  38.data  7.data  8.data
training_set/data/jazz/6/: 15.data  2.data  20.data  29.data  3.data  31.data  32.data  33.data  46.data
training_set/data/jazz/8/: 0.data  2.data  3.data
training_set/data/misc/0/: 11.data  17.data  18.data  19.data  20.data  23.data  26.data  3.data  34.data  38.data  39.data  45.data  47.data  54.data
training_set/data/piano/1/: 2.data  3.data  4.data  6.data  8.data
training_set/data/piano/2/: 0.data  12.data  13.data  14.data  18.data  19.data  20.data  24.data  26.data  28.data  5.data  7.data  9.data
training_set/data/piano/5/: 1.data  10.data  13.data  14.data  4.data  5.data  6.data  7.data  8.data  9.data
(+76 files in other folders)
